Complete project (CRUD) - Firebase Auth (Sign in with Google and Sign in as guest) - Firebase firestore CRUD operations - Removed isar db - Removed bloc

--- a/web/index.html
+++ b/web/index.html
@@ -19,11 +19,12 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
-
+  <meta name="google-signin-client_id" content="398101876266-4fjd7nkr3l8m0jpl70467gbd0pnjhn5a.apps.googleusercontent.com">
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flowdo">
+
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
